# claude-task-system

./: .gitignore  CHANGELOG.md  CLAUDE.md  FEATURE-WORKFLOW.md  IMPLEMENTATION-PLAN.md  PLAN-automate-task-completion.md  PLUGIN-MIGRATION-PLAN.md  PLUGIN-MIGRATION-PROGRESS.md  README.md  RELEASING.md  STORYBOOK_RESTRUCTURE_PLAN.md  biome.json  dummy-10.txt  dummy-11.txt  dummy-12.txt  dummy-13.txt  dummy-14.txt  dummy-15.txt  dummy-2.txt  dummy-3.txt  dummy-4.txt  dummy-5.txt  dummy-6.txt  dummy-7.txt  dummy-9.txt  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  wow.md
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: journaling.md  printer-tester.md  task-analyzer.md
.claude/commands/: adr.md  complete-task.md  define-feature.md  generate-tasks.md  new-task.md  parallel-cleanup-worktree.md  parallel-finalize-task.md  (+4 more)
.saga/: config.json
agents/: journaling.md
commands/: adr.md  define-feature.md  generate-tasks.md  init.md  new-task.md  parallel-cleanup-worktree.md  parallel-finalize-task.md  parallel-start-task.md  plan-feature.md
docs/: dashboard-package.md  plugin-scripts.md  schema-system.md  skill-system.md  storage-layer.md  testing-guide.md  worker-architecture.md
dummy/: index.js  jest.config.mjs  package.json  utils.js
execution/: PARALLEL-WORKFLOW-GUIDE.md  TASK-LIST.md  TASK-WORKFLOW.md
project-tasks/: PARALLEL-WORKFLOW-GUIDE.md  TASK-TEMPLATE.md
tests/: run-tests.sh
workflows/: README.md  parallel-workflow-guide.md  performance-workflow.md  refactor-workflow.md
(+464 files in other folders)
